# python-interview-challenge

./: 404.php  CHALLENGES_OVERVIEW.md  GETTING_STARTED.md  README.md  about.php  blog.php  contact.php  create_readmes.py  faq.php  index.php  navigate_challenges.py  new.php  service.php
admin/: add-blog.php  add-location.php  conn.php  footer.php  forgot-password.php  login.php  password-reset.php  sidebar.php  single-package.php  starter.html  title.php  topbar.php
assets/css/: styles.css
includes/: footer.php  header.php
pages/: catagories.php  gallery.php  notification.php  office.php  portfolio.php  team.php
python- challenge project/: LICENSE  README.md  progress.md  requirements.txt
python- challenge project/30-Day-Senior-Python-Challenge/: README.md  progress.md  requirements.txt
python- challenge project/utils/: config_loader.py  logger.py
python- challenge project/week1_core_foundations/day01_lru_cache/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
python- challenge project/week1_core_foundations/day01_lru_cache/docs/: API_REFERENCE.md  DESIGN.md  README.md
python- challenge project/week1_core_foundations/day01_lru_cache/lru_cache/: __init__.py  core.py  exceptions.py  redis_backed.py  simple.py  thread_safe.py  utils.py
python- challenge project/week1_core_foundations/day01_lru_cache/scripts/: benchmark.py  redis_init.py  run_cache_demo.py
python- challenge project/week1_core_foundations/day01_lru_cache/tests/: test_core.py  test_redis_backed.py  test_thread_safe.py  test_utils.py
python- challenge project/week1_core_foundations/day02_json_parser/: README.md  example-demo.py  parser.py  pyproject.toml  requirements.txt  serializer.py  setup.py
python- challenge project/week1_core_foundations/day02_json_parser/src/json_parser/: __init__.py  errors.py  parser.py  serializer.py  tokenizer.py  utils.py
python- challenge project/week1_core_foundations/day02_json_parser/src/json_parser_project.egg-info/: PKG-INFO  SOURCES.txt
python- challenge project/week1_core_foundations/day02_json_parser/tests/: __init__.py  test_advanced.py  test_basic.py  test_nested.py
python- challenge project/week1_core_foundations/day03_dependency_injection/: README.md  pyproject.toml  requirements.txt  setup.py
python- challenge project/week1_core_foundations/day03_dependency_injection/di_container/: __init__.py  container.py  decorators.py  exceptions.py  utils.py
python- challenge project/week1_core_foundations/day03_dependency_injection/di_container_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python- challenge project/week1_core_foundations/day03_dependency_injection/examples/: autowire_example.py  basic_example.py
python- challenge project/week1_core_foundations/day03_dependency_injection/tests/: __init__.py  test_autowire.py  test_container.py  test_errors.py
python_challenges/: CHALLENGES_SUMMARY.md  README.md  challenge_template.py  generate_challenges.py
python_challenges/senior/: README.md  challenge_001.py  challenge_002.py  challenge_003.py  challenge_004.py  challenge_005.py  challenge_007.py  challenge_008.py  challenge_009.py  challenge_012.py  challenge_014.py  challenge_017.py  challenge_018.py  challenge_021.py  challenge_023.py  challenge_029.py  challenge_034.py  challenge_036.py  challenge_037.py  challenge_038.py  challenge_039.py  challenge_041.py  (+5 more)
senior/: challenge_006.py  challenge_010.py  challenge_011.py  challenge_013.py  challenge_015.py  challenge_016.py  challenge_019.py  challenge_020.py  challenge_022.py  challenge_024.py  challenge_025.py  challenge_026.py  challenge_027.py  challenge_028.py  challenge_030.py  challenge_031.py  challenge_032.py  challenge_033.py  challenge_035.py  challenge_040.py  challenge_045.py  challenge_046.py  challenge_049.py  challenge_050.py
(+58 files in other folders)
