[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-parser-project"
version = "1.0.0"
description = "Advanced JSON Parser with Tokenizer and Serializer"
readme = "README.md"
authors = [
    {name = "Python Challenge Project", email = "challenge@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/python-challenge-project/json-parser"
Repository = "https://github.com/python-challenge-project/json-parser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
json_parser = "src/json_parser"