[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "di-container-project"
version = "1.0.0"
description = "Dependency Injection Container Implementation"
readme = "README.md"
authors = [
    {name = "Python Challenge Project", email = "challenge@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/python-challenge-project/di-container"
Repository = "https://github.com/python-challenge-project/di-container"